--- a/parser_testing.ipynb
+++ b/parser_testing.ipynb
@@ -52,49 +52,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These Unbelievably Fluffy Dinner Rolls Have Taken Over Restaurant Tables. Here's How Easy It Is to Make Them at Home \n",
+      "Sticky Rice With Mango \n",
       "\n",
-      "4 1/4 cups all-purpose flour\n",
-      "1 tablespoon kosher salt\n",
-      "290 ml) whole milk\n",
-      "1/4 cup granulated sugar\n",
-      "1 large egg\n",
-      "4 tablespoons unsalted butter\n",
-      "4 tablespoons unsalted butter\n",
-      "1 large egg\n",
-      "1 teaspoon (5ml) tap water\n",
-      "1 teaspoon salt\n",
+      "5 1/2 cups glutinous rice\n",
+      "3 2/3 cups well-stirred canned unsweetened coconut milk\n",
+      "⅓ cup\n",
+      "kosher salt\n",
+      "1 large mango\n",
       "\n",
-      "In the bowl of a stand mixer, whisk together flour, yeast, and salt until combined. ['whisk'] [('flour', Fraction(17, 4)), ('salt', Fraction(1, 1))] ['the bowl', 'a stand mixer'] [] []\n",
-      "In medium bowl or 2-cup liquid measuring cup, whisk milk, sugar, egg, and egg yolk until combined. ['in'] [('whisk milk', Fraction(290, 1)), ('egg', Fraction(1, 1)), ('egg yolk', Fraction(1, 1))] ['medium bowl', '2-cup liquid measuring cup'] [] []\n",
-      "Set mixer bowl into stand mixer base and fit mixer with dough hook. ['set'] [] ['mixer bowl', 'fit mixer'] [] []\n",
-      "On medium-low speed, slowly pour in the liquid mixture until dough comes together and no dry flour remains, about 2 minutes, scraping down bowl and dough hook frequently. ['pour'] [] [] ['about 2 minutes'] []\n",
-      "Increase speed to medium and, with mixer running, add 4 tablespoons butter, 1 piece at a time, allowing each piece to incorporate before adding next, about 2 minutes total, scraping down bowl and dough hook as needed. ['increase', 'add'] [('unsalted butter', Fraction(4, 1)), ('unsalted butter', Fraction(4, 1))] [] ['about 2 minutes'] []\n",
-      "Continue to knead on medium speed until dough is elastic, sticky, and pulls away cleanly from sides of bowl, about 10 minutes longer. ['continue'] [] ['bowl'] ['about 10 minutes'] []\n",
-      "Transfer dough to a lightly greased large bowl. ['transfer'] [] ['a lightly greased large bowl'] [] []\n",
-      "Cover with plastic wrap or a kitchen towel and set aside to proof at room temperature until about doubled in size and, about 60 to 90 minutes. ['cover', 'set'] [] [] [] ['room temperature']\n",
-      "(Dough is properly proofed when it slowly springs back to its original shape when gently pressed with your knuckle). ['proofed'] [] [] [] []\n",
-      "Punch down dough and turn dough out onto a lightly floured work surface. ['punch', 'turn'] [] [] [] []\n",
-      "Divide dough into 15 even portions (about 2.25 ounces. ['divide'] [] [] [] []\n",
-      "65g each). ['65'] [] [] [] []\n",
-      "Working with 1 dough portion at a time, cup dough with your palm and roll against counter into a smooth, tight ball. ['cup'] [] [] [] []\n",
-      "Cover balls loosely with a clean towel or greased plastic wrap and let rest for 10 minutes. ['cover', 'greased', 'let'] [] [] ['10 minutes'] []\n",
-      "Working with one dough ball at a time, gently stretch dough into a rough rectangular shape, about 2 inches wide by 5 inches long. ['stretch'] [] [] [] []\n",
-      "Brush the top side with a generous layer of melted butter and fold dough in half over itself, stretching the top half slightly over the edge of the bottom half to create a square that measures roughly 2 inches x 2 inches. ['brush', 'fold'] [] [] [] []\n",
-      "Transfer to a buttered 9- x 13-inch baking pan, flat side down. ['transfer'] [] [] [] []\n",
-      "Repeat with remaining dough balls, arranging folded dough squares into pan in 3 rows of 5. ['repeat'] [] ['pan'] [] []\n",
-      "Cover pan with a kitchen towel or loosely with a piece of greased plastic wrap and proof at room temperature until rolls are puffed but not quite doubled in size, and dough springs back slowly with poked, about 45 minutes. ['cover'] [] ['pan'] ['about 45 minutes'] ['room temperature']\n",
-      "6. ['6'] [] [] [] []\n",
-      "While buns proof, adjust oven rack to middle position and preheat oven to 350°F (175℃). ['adjust'] [] ['preheat oven'] [] []\n",
-      "When ready to bake, in a small bowl, beat egg and water until smooth. ['beat'] [('water', Fraction(1, 1))] ['a small bowl'] [] []\n",
-      "Using a pastry brush, brush the tops of the rolls evenly with the egg wash. ['using', 'brush'] [] [] [] []\n",
-      "Bake until golden brown and an instant read thermometer inserted in center of rolls registers 190℉ (87℃), 20 to 30 minutes. ['bake', 'registers'] [] [] ['20 to 30 minutes'] []\n",
-      "Immediately brush hot rolls with reserved melted butter and sprinkle with flaky sea salt. ['brush', 'sprinkle'] [] [] [] []\n",
-      "Let cool slightly, about 20 minutes, before serving warm. ['let'] [] [] ['about 20 minutes'] []\n",
-      "Or let cool completely in pan on a wire rack, about 1 hour, to serve at room temperature. ['let'] [] ['pan'] ['about 1 hour'] ['room temperature']\n",
-      "Stand-mixer with dough hook, pastry brush, 9- x 13-inch baking dish. ['mixer'] [] ['stand-mixer', 'x 13-inch baking dish'] [] []\n",
-      "The baked rolls can be stored covered at room temperature for 1 day. ['stored'] [] [] ['1 day'] ['room temperature']\n",
-      "To refresh them before serving, wrap them in aluminum foil and heat them in a 350°F (175℃) oven until warmed through, about 15 minutes. ['refresh', 'wrap', 'heat'] [] [] ['about 15 minutes'] []\n"
+      "Rinse 1½ cups glutinous rice in a fine-mesh sieve under cold running water until water runs clear. ['rinse'] [('glutinous rice', Fraction(11, 2))] [] [] []\n",
+      "Transfer rice to medium bowl, fill with cold water to cover by 1\", and chill overnight. ['transfer', 'fill', 'chill'] [] ['medium bowl'] [] []\n",
+      "Drain rice well in a fine-mesh sieve. ['drain'] [] [] [] []\n",
+      "Set sieve over a large deep saucepan of simmering water (sieve should not touch water). ['set'] [] ['a large deep saucepan'] [] []\n",
+      "Cover with a kitchen towel and lid (towel will help lock in steam. ['cover'] [] [] [] []\n",
+      "But be cautious the it doesn’t droop down to an open flame burner), and steam rice 30–40 minutes, or until tender (check water level in pan occasionally, adding more if necessary). ['droop', 'rice', 'until'] [] ['tender', 'pan'] ['30–40 minutes'] []\n",
+      "While rice is cooking, bring 1 cup well-stirred canned unsweetened coconut milk , ⅓ cup (67 g) granulated sugar , and ¼ tsp. ['bring'] [('well-stirred canned unsweetened coconut milk', Fraction(1, 1))] ['⅓ cup'] [] []\n",
+      "Kosher salt to a boil in a small saucepan, stirring regularly, until sugar is dissolved. ['kosher'] [('kosher salt', None)] ['a small saucepan'] [] ['a boil']\n",
+      "Remove from heat and keep mixture warm. ['remove', 'keep'] [] [] [] ['heat']\n",
+      "Transfer cooked rice to a bowl and stir in coconut milk mixture. ['transfer', 'stir'] [('coconut milk mixture', Fraction(8, 3))] ['a bowl'] [] []\n",
+      "Let rice stand, covered, 30 minutes, or until coconut milk mixture is absorbed. ['let', 'covered'] [] [] ['30 minutes'] []\n",
+      "Rice may be prepared up to this point 2 hours ahead and kept covered at room temperature. ['prepared', 'kept'] [] [] ['2 hours'] ['room temperature']\n",
+      "Meanwhile, boil remaining ⅓ cup coconut milk with remaining 3 Tbsp. ['boil'] [] [] [] []\n",
+      "Granulated sugar on medium heat, stirring occasionally, until sugar is dissolved and mixture has thickened slightly, about 1 minute. ['granulated'] [] [] ['about 1 minute'] ['medium heat']\n",
+      "Transfer sauce to a small bowl and chill until cool. ['transfer'] [] ['a small bowl'] [] ['chill']\n",
+      "To serve, mold ¼ cup servings of coconut rice on dessert plates. ['serve'] [] ['dessert plates'] [] []\n",
+      "Drizzle plates with sweet coconut sauce and sprinkle 1 Tbsp. ['drizzle'] [] [] [] []\n",
+      "Sesame seeds, toasted lightly , over rice. ['toasted'] [] [] [] []\n",
+      "Divide 1 large mango, peeled, pitted, and cut into thin slices , among plates. ['divide'] [('large mango', Fraction(1, 1))] ['plates'] [] []\n",
+      "Join the home cook community. ['join'] [] [] [] []\n",
+      "Food Innovation Group. ['Group'] [] [] [] []\n"
      ]
     }
    ],
@@ -102,7 +88,8 @@
     "import parser as p\n",
     "import util as u\n",
     "\n",
-    "recipe = p.get_recipe_from_url(\"https://www.seriouseats.com/parker-house-rolls-recipe-8733832\")\n",
+    "recipe = p.get_recipe_from_url(\"https://www.epicurious.com/recipes/food/views/sticky-rice-with-mango-12066\")\n",
+    "# recipe = p.get_recipe_from_url(\"https://www.seriouseats.com/parker-house-rolls-recipe-8733832\")\n",
     "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
     "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/218091/classic-and-simple-meat-lasagna/\")\n",
     "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
@@ -119,40 +106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "heat VERB ROOT heat VERB [them, in, warmed] \n",
-      "them PRON dobj heat VERB [] \n",
-      "in ADP prep heat VERB [oven] \n",
-      "a DET det oven NOUN [] \n",
-      "350 NUM nummod ° NOUN [] QUANTITY\n",
-      "° NOUN nummod oven NOUN [350, F] QUANTITY\n",
-      "F PROPN dep ° NOUN [(, ℃, )] QUANTITY\n",
-      "( PUNCT punct F PROPN [] \n",
-      "175 NUM nummod ℃ PROPN [] QUANTITY\n",
-      "℃ PROPN appos F PROPN [175] QUANTITY\n",
-      ") PUNCT punct F PROPN [] \n",
-      "oven NOUN pobj in ADP [a, °] \n",
-      "until SCONJ mark warmed VERB [] \n",
-      "warmed VERB advcl heat VERB [until, through] \n",
-      "through ADP prep warmed VERB [] \n",
+      "1½ NUM nummod cups NOUN [] CARDINAL\n",
+      "cups NOUN ROOT cups NOUN [1½, rice] \n",
+      "glutinous PROPN compound rice NOUN [] \n",
+      "rice NOUN appos cups NOUN [glutinous] \n",
       "\n",
-      "them them dobj heat 1 2 1\n",
-      "175℃ ℃ appos F 8 10 9\n",
+      "1½ cups cups ROOT cups 0 2 1\n",
+      "glutinous rice rice appos cups 2 4 3\n",
       "\n",
-      "350°F QUANTITY\n",
-      "175℃ QUANTITY\n"
+      "1½ CARDINAL\n"
      ]
     }
    ],
    "source": [
     "# text = \"lay eggplant slices on paper towels\"\n",
-    "text = \"heat them in a 350°F (175℃) oven until warmed through\"\n",
+    "text = \"1½ cups glutinous rice\"\n",
     "# text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
     "# text = \"scald milk in a saucepan over medium heat\"\n",
     "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
